# jsonParCe

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml  docker.yml  windows.yml
cmake/: Config.cmake.in  destination.config.cmake
docker/CodeChecker/: Dockerfile  entrypoint.sh  run.sh
docker/ubuntu/: Dockerfile  entrypoint.sh
docker/windows/: Dockerfile  entrypoint.ps1
examples/: CMakeLists.txt  deep_parsing.c  shallow_parsing.c
include/: c_json_parser.h  encoding.h  json_parce.h  parser.h
json_path/: CMakeLists.txt  expressions.cpp  expressions.hpp  json_node.cpp  json_node.hpp  json_path.cpp  json_path.hpp  json_path_filter.cpp  json_path_filter.hpp  main.cpp
json_path/filter/: expressions.hpp  json_path_filter.hpp
src/: c_json_parser.c  encoding.c  json_parce.c  parser.c
test/: CMakeLists.txt  bench.c  test.c  test_jsontestsuite.c
test/encodings/: utf-16BE.json  utf-16BEBOM.json  utf-16LE.json  utf-16LEBOM.json  utf-32BE.json  utf-32BEBOM.json  utf-32LE.json  utf-32LEBOM.json  utf-8.json  utf-8BOM.json
